--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ TYPE_ORM_DATABASE_HOST=127.0.0.1
 TYPE_ORM_DATABASE_USERNAME=postgres
 TYPE_ORM_DATABASE_PASSWORD=postgres
 TYPE_ORM_DATABASE_NAME=test_db
+AWS_PUBLIC_BUCKET_NAME=property-wallet-website
+AWS_BUCKET_PREFIX=backend-data/
+AWS_REGION=ap-south-1
+AWS_ACCESS_KEY_ID=AKIAUCVMOYINTYWLXRG2
+AWS_SECRET_ACCESS_KEY=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
